--- a/src/Huskui.Gallery/Views/Pages/HomePage.axaml
+++ b/src/Huskui.Gallery/Views/Pages/HomePage.axaml
@@ -8,7 +8,7 @@
              x:Class="Huskui.Gallery.Views.Pages.HomePage">
 
     <ScrollViewer Padding="48">
-        <StackPanel Spacing="32" HorizontalAlignment="Center" MinWidth="800">
+        <StackPanel Spacing="32" MaxWidth="800">
             <!-- Welcome Section -->
             <StackPanel Spacing="16">
                 <TextBlock Text="Welcome to Huskui Gallery"
